--- a/style.css
+++ b/style.css
@@ -14,12 +14,15 @@ body {
     --transition-delay: 1s;
     --background-color: #202124;
     --text-color: #f5f5f5f0;
+    height: 100%;
     color: var(--text-color);
     background-color: var(--background-color);
     display: flex;
     flex-direction: column;
     transition: 1s;
     display: flex;
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 
 body.light {
@@ -59,7 +62,8 @@ button {
 
 .profile-picture {
     margin-top: 20%;
-    width: 100%;
+    width: auto;
+    max-width: 100%;
     height: auto;
     border-radius: 50%;
 }
